sfdx-source/force-app/main/default/objects/Staging_Bulk_Upload_Request__c/Staging_Bulk_Upload_Request__c.object-meta.xml
<CustomObject>
    <description>LEM-15978: Stores CSV file records. System doesn&apos;t allow partial load in case of any error.</description>
    <label>Staging Bulk Upload Request</label>
    <nameField>
        <displayFormat>SBR-{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>Staging Bulk Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staging Bulk Upload Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>