sfdx-source/force-app/main/default/objects/Staging_Bulk_Upload_Request__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>LEM-15978: Stores the address (Street, City, State, Country, Postal Code)</description>
    <label>Address</label>
    <type>Address</type>
</CustomField>