sfdx-source/force-app/main/default/objects/Staging_Bulk_Upload_Request__c/fields/Business_ID__c.field-meta.xml
<CustomField>
    <fullName>Business_ID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>LEM-15978: Stores Business Account Id (18 digits).</description>
    <label>Business ID</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Record_Type_Name__c</field>
            <operation>equals</operation>
            <value>Business</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Staging Bulk Upload Requests</relationshipLabel>
    <relationshipName>Staging_Bulk_Upload_Requests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>