sfdx-source/force-app/main/default/objects/Staging_Bulk_Upload_Request__c/fields/Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>LEM-15978: Stores Contact Id (18 digits).</description>
    <label>Contact Id</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Staging Bulk Upload Requests</relationshipLabel>
    <relationshipName>Staging_Bulk_Upload_Requests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>