sfdx-source/force-app/main/default/objects/Staging_Bulk_Upload_Request__c/fields/Defective_Printer_IMEI__c.field-meta.xml
<CustomField>
    <fullName>Defective_Printer_IMEI__c</fullName>
    <description>LEM-15978: Stores Defective Printer IMEI Number For Return/Replacement Request Types.</description>
    <label>Defective Printer IMEI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>