sfdx-source/force-app/main/default/objects/Staging_Bulk_Upload_Request__c/fields/Defective_Tablet_IMEI__c.field-meta.xml
<CustomField>
    <fullName>Defective_Tablet_IMEI__c</fullName>
    <description>LEM-15978: Stores Defective Tablet IMEI Number For Return/Replacement Request Types.</description>
    <label>Defective Tablet IMEI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>