sfdx-source/force-app/main/default/objects/Staging_Bulk_Upload_Request__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>LEM-15978: Stores Error Messages on Failure.</description>
    <label>Error Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>