sfdx-source/force-app/main/default/objects/Staging_Bulk_Upload_Request__c/fields/Menu_Preview_Link__c.field-meta.xml
<CustomField>
    <fullName>Menu_Preview_Link__c</fullName>
    <description>LEM-15978: Stores Menu Preview Link For Photoshoot Type.</description>
    <label>Menu Preview Link</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>