sfdx-source/force-app/main/default/objects/Staging_Bulk_Upload_Request__c/fields/Menu_URL__c.field-meta.xml
<CustomField>
    <fullName>Menu_URL__c</fullName>
    <description>LEM-15978: Stores Menu URL For Photoshoot Type.</description>
    <label>Menu URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>