sfdx-source/force-app/main/default/objects/Staging_Bulk_Upload_Request__c/fields/Order_Protocol__c.field-meta.xml
<CustomField>
    <fullName>Order_Protocol__c</fullName>
    <description>LEM-15978: Stores Order Protocol for Tablet &amp; Marketing-Kit Types.</description>
    <label>Order Protocol</label>
    <length>255</length>
    <type>Text</type>
</CustomField>