sfdx-source/force-app/main/default/objects/Staging_Bulk_Upload_Request__c/fields/Photoshoot_Date__c.field-meta.xml
<CustomField>
    <fullName>Photoshoot_Date__c</fullName>
    <description>LEM-15978: Stores Photoshoot Date For Photoshoot Type.</description>
    <label>Photoshoot Date</label>
    <type>Date</type>
</CustomField>