sfdx-source/force-app/main/default/objects/Staging_Bulk_Upload_Request__c/fields/Photoshoot_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Photoshoot_Date_Time__c</fullName>
    <description>LEM-15978: Formula For Photoshoot Datetime (in GMT) For Photoshoot Type.</description>
    <formula>DATETIMEVALUE(TEXT(Photoshoot_Date__c) &amp; &apos; &apos; &amp; LEFT(TEXT(Photoshoot_Time__c),8))</formula>
    <inlineHelpText>GMT Time</inlineHelpText>
    <label>Photoshoot Date Time</label>
    <type>DateTime</type>
</CustomField>