sfdx-source/force-app/main/default/objects/Staging_Bulk_Upload_Request__c/fields/Photoshoot_Review_Notes_Tags__c.field-meta.xml
<CustomField>
    <fullName>Photoshoot_Review_Notes_Tags__c</fullName>
    <description>LEM-15978: Stores Review Notes/Tags For Photoshoot Type.</description>
    <label>Photoshoot Review Notes / Tags</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>