sfdx-source/force-app/main/default/objects/Staging_Bulk_Upload_Request__c/fields/Photoshoot_Time__c.field-meta.xml
<CustomField>
    <fullName>Photoshoot_Time__c</fullName>
    <description>LEM-15978: Stores Photoshoot Time For Photoshoot Type.</description>
    <label>Photoshoot Time</label>
    <type>Time</type>
</CustomField>