sfdx-source/force-app/main/default/objects/Staging_Bulk_Upload_Request__c/fields/Product_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Product_Bundle__c</fullName>
    <description>LEM-15978: Stores Product Bundle For Net-New/Replacement/Marketing-Kit Request Types.</description>
    <label>Product Bundle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>