sfdx-source/force-app/main/default/objects/Staging_Bulk_Upload_Request__c/fields/Reason_for_Additional_Photoshoot__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Additional_Photoshoot__c</fullName>
    <description>LEM-15978: Stores Reason For Additional Photoshoot For Photoshoot Type.</description>
    <label>Reason for Additional Photoshoot</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Issues with the original photoshoot delivered</fullName>
            </value>
            <value>
                <fullName>High value market mx requesting additional photos</fullName>
            </value>
            <value>
                <fullName>Replacing older photos due to new menu</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>