sfdx-source/force-app/main/default/objects/Staging_Bulk_Upload_Request__c/fields/Reason_if_Other__c.field-meta.xml
<CustomField>
    <fullName>Reason_if_Other__c</fullName>
    <description>LEM-15978: Stores Reason (If Other) For Photoshoot Type.</description>
    <label>Reason if Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>