sfdx-source/force-app/main/default/objects/Staging_Bulk_Upload_Request__c/fields/Replacement_Reason__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Reason__c</fullName>
    <description>LEM-15978: Stores Reason for Replacement for Replacement Request Type.</description>
    <label>Replacement Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tablet Lost</fullName>
            </value>
            <value>
                <fullName>Tablet Stolen</fullName>
            </value>
            <value>
                <fullName>Tablet Screen Cracked</fullName>
            </value>
            <value>
                <fullName>Tablet Won’t Charge</fullName>
            </value>
            <value>
                <fullName>Tablet Won’t Connect to Internet</fullName>
            </value>
            <value>
                <fullName>Accessories Lost/Broken</fullName>
            </value>
            <value>
                <fullName>Other (please specify reason in notes)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>