sfdx-source/force-app/main/default/objects/Staging_Bulk_Upload_Request__c/fields/Replacement_Reason_if_Other__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Reason_if_Other__c</fullName>
    <description>LEM-15978: Stores Reason If Replacement Reason Is Other (Please Specify Reason In Notes).</description>
    <label>Replacement Reason if Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>