sfdx-source/force-app/main/default/objects/Staging_Bulk_Upload_Request__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <description>LEM-15978: Formula for Request Type From The Related Reference (Parent) Record.</description>
    <formula>TEXT( Staging_Upload_Ref__r.Request_Type__c )</formula>
    <label>Request Type</label>
    <type>Text</type>
</CustomField>