sfdx-source/force-app/main/default/objects/Staging_Bulk_Upload_Request__c/fields/Return_Components__c.field-meta.xml
<CustomField>
    <fullName>Return_Components__c</fullName>
    <defaultValue>&apos;No&apos;</defaultValue>
    <description>LEM-15978: Stores &apos;Yes&apos; if the request type is &apos;Return&apos; and &apos;No&apos; if otherwise.</description>
    <label>Return Components</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>