sfdx-source/force-app/main/default/objects/Staging_Bulk_Upload_Request__c/fields/Shipping_Type__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Type__c</fullName>
    <description>LEM-15978: Stores Shipping Type - Standard or Expedited. Applicable For Tablet and Marketing-Kit Types.</description>
    <label>Shipping Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Expedited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>