sfdx-source/force-app/main/default/objects/Staging_Bulk_Upload_Request__c/fields/Staging_Upload_Ref__c.field-meta.xml
<CustomField>
    <fullName>Staging_Upload_Ref__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-15978: Stores Staging Bulk Reference (Parent) Record Id.</description>
    <label>Staging Upload Ref</label>
    <referenceTo>Staging_Bulk_Upload_Reference__c</referenceTo>
    <relationshipLabel>Staging Bulk Upload Requests</relationshipLabel>
    <relationshipName>Staging_Bulk_Upload_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>