sfdx-source/force-app/main/default/objects/Staging_Bulk_Upload_Request__c/fields/Store_ID__c.field-meta.xml
<CustomField>
    <fullName>Store_ID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>LEM-15978: Stores Store Account Id (18 digits).</description>
    <label>Store ID</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Record_Type_Name__c</field>
            <operation>equals</operation>
            <value>Store</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Staging Bulk Upload Requests (Store ID)</relationshipLabel>
    <relationshipName>Staging_Bulk_Upload_Requests1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>