sfdx-source/force-app/main/default/objects/Staging_Bulk_Upload_Request__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>LEM-15978: Formula for Type From The Related Reference (Parent) Record.</description>
    <formula>TEXT(Staging_Upload_Ref__r.Type__c)</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>