sfdx-source/force-app/main/default/objects/Staging_Bulk_Upload_Request__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <description>LEM-13509: It is used to store the vendor selection for the Order.</description>
    <label>Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Denali</fullName>
            </value>
            <value>
                <fullName>Social Mobile</fullName>
            </value>
            <value>
                <fullName>OCUS</fullName>
            </value>
            <value>
                <fullName>Snappr</fullName>
            </value>
            <value>
                <fullName>Overture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>