sfdx-source/force-app/main/default/objects/Staging_Bulk_Upload_Request__c/validationRules/Address_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Address_Required</fullName>
    <active>true</active>
    <description>LEM-15978: Address is required for all bulk requests.</description>
    <errorConditionFormula>AND(
    NOT($Permission.ByPass_Bulk_Update_Staging_Validation),
    OR(
       ISBLANK(Address__Street__s),
       ISBLANK(Address__City__s),
       ISPICKVAL(Address__StateCode__s,&apos;&apos;),
       ISPICKVAL(Address__CountryCode__s,&apos;&apos;),
       ISBLANK(Address__PostalCode__s)
    )
)</errorConditionFormula>
    <errorMessage>Address is required.</errorMessage>
</ValidationRule>