sfdx-source/force-app/main/default/objects/Staging_Bulk_Upload_Request__c/validationRules/Menu_Or_Menu_Preview_Link_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Menu_Or_Menu_Preview_Link_Required</fullName>
    <active>true</active>
    <description>LEM-15978: Menu or Menu Preview link field are required for Photoshoot type.</description>
    <errorConditionFormula>AND(
    NOT($Permission.ByPass_Bulk_Update_Staging_Validation),
    Type__c = $Label.Work_Order_Photoshoot,
    ISBLANK(Menu_Preview_Link__c),
    ISBLANK(Menu_URL__c)
)</errorConditionFormula>
    <errorMessage>Either Menu Preview Link OR Menu URL needs to be filled out to submit the request (one or the other).</errorMessage>
</ValidationRule>