sfdx-source/force-app/main/default/objects/Staging_Bulk_Upload_Request__c/validationRules/Order_Protocol_Should_Contain_Tablet.validationRule-meta.xml
<ValidationRule>
    <fullName>Order_Protocol_Should_Contain_Tablet</fullName>
    <active>true</active>
    <description>LEM-15978: Order Protocol must contain a DoorDash owned Tablet.</description>
    <errorConditionFormula>AND(
    NOT($Permission.ByPass_Bulk_Update_Staging_Validation),
    Type__c = $Label.Work_Order_Tablet,
    OR(
       ISBLANK(Order_Protocol__c),
       NOT(CONTAINS(Order_Protocol__c, $Label.Work_Order_Tablet)),
       Order_Protocol__c = $Label.Work_Order_Order_Protocol_POS_Tablet,
       Order_Protocol__c = $Label.Work_Order_Order_Protocol_Android_Owns
      )
   )</errorConditionFormula>
    <errorMessage>Order Protocol must contain a DoorDash owned Tablet to continue.</errorMessage>
</ValidationRule>