sfdx-source/force-app/main/default/objects/Staging_Bulk_Upload_Request__c/validationRules/Product_Bundle_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Bundle_Required</fullName>
    <active>true</active>
    <description>LEM-15978: Product Bundle column is required only for (Tablet+Net- New) or (Tablet+Replacement) combination.</description>
    <errorConditionFormula>AND(
    NOT($Permission.ByPass_Bulk_Update_Staging_Validation),
    Type__c = $Label.Work_Order_Tablet,
    Request_Type__c != $Label.Work_Order_Sub_Type_Return,
    ISBLANK(Product_Bundle__c)
   )</errorConditionFormula>
    <errorMessage>Product Bundle is required when request type is &apos;Net-New&apos; or  &apos;Replacement&apos;.</errorMessage>
</ValidationRule>