sfdx-source/force-app/main/default/objects/Staging_Bulk_Upload_Request__c/validationRules/Reason_Replacement_Other_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_Replacement_Other_Required</fullName>
    <active>true</active>
    <description>LEM-15978: Reason for Replacement (if other) is required if Replacement Reason is &apos;Other (please specify reason in notes)&apos;.</description>
    <errorConditionFormula>AND(
    NOT($Permission.ByPass_Bulk_Update_Staging_Validation), 
    ISPICKVAL(Replacement_Reason__c, &quot;Other (please specify reason in notes)&quot;), 
    ISBLANK(Replacement_Reason_if_Other__c)
    )</errorConditionFormula>
    <errorMessage>Reason for Replacement (if other) is required.</errorMessage>
</ValidationRule>