sfdx-source/force-app/main/default/objects/Staging_Bulk_Upload_Request__c/validationRules/Shipping_Type_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Shipping_Type_Required</fullName>
    <active>true</active>
    <description>LEM-15978: Shipping Type is required if type is Tablet.</description>
    <errorConditionFormula>AND(
    NOT($Permission.ByPass_Bulk_Update_Staging_Validation), 
    Type__c = $Label.Work_Order_Tablet, 
    ISPICKVAL(Shipping_Type__c, &apos;&apos;)
   )</errorConditionFormula>
    <errorMessage>Shipping Type is required if type is &apos;Tablet&apos;.</errorMessage>
</ValidationRule>