sfdx-source/force-app/main/default/objects/Staging_Bulk_Upload_Request__c/validationRules/Validate_Photoshoot_Vendor.validationRule-meta.xml
<ValidationRule>
  <fullName>Validate_Photoshoot_Vendor</fullName>
  <active>true</active>
  <description>LEM-21576: Photoshoot Vendor should be either &apos;OCUS&apos; or &apos;Snappr&apos; if Work Order type is &apos;Photoshoot&apos;.</description>
  <errorConditionFormula>AND(
    NOT($Permission.ByPass_Bulk_Update_Staging_Validation),
    Type__c = $Label.Work_Order_Photoshoot,
    NOT(ISBLANK(TEXT(Vendor__c))),
    NOT(
      OR(
        TEXT(Vendor__c) = $Label.Photoshoot_Vendor_OCUS,
        TEXT(Vendor__c) = $Label.Photoshoot_Vendor_Snappr
      )
    )
  )</errorConditionFormula>
  <errorMessage>Please select OCUS or Snappr For PhotoShoot Request</errorMessage>
</ValidationRule>